--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,9 @@
-/**
-  |============================
+/* |============================
   | include css partials with
   | default @import url()
-  |============================
-*/
+  |============================ */
+
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
 
 :root {
@@ -22,4 +20,41 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 1128px;
+  top: 248px;
+}
+
+.gallery-item {
+  margin: 10px;
+  max-width: 360px;
+  max-height: 200px;
+  flex-shrink: 0;
+}
+
+.gallery-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery-image:hover {
+  transform: scale(1.1);
 }
