--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,11 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./01gallery.html" class="nav-link">Task 1</a>
+        <a href="./1-gallery.html" class="nav-link">Task 1</a>
       </li>
 
       <li class="nav-item">
-        <a href="./02form.html" class="nav-link">Task 2</a>
+        <a href="./2-form.html" class="nav-link">Task 2</a>
       </li>
     </ul>
   </nav>
